--- a/src/global.module.css
+++ b/src/global.module.css
@@ -1,11 +1,11 @@
 /* :root {
-    --background-color: rgb(213, 213, 213);
-    --button-background-color: rgb(246, 128, 246);
-    --button-background-color-hover: rgb(241, 33, 241);
-    --button-background-color-disabled: rgb(249, 183, 249);
-    --button-text-color: rgb(255, 255, 255);
-    --button-outlined-text-color: rgb(147, 90, 255);
-    --link-color: rgb(111, 35, 253);
+    --background-color: ;
+    --button-background-color: ;
+    --button-background-color-hover: ;
+    --button-background-color-disabled: ;
+    --button-text-color: ;
+    --button-outlined-text-color: ;
+    --link-color: ;
   }
   html,
   body {
