--- a/src/components/Auth/RegisterPage.module.css
+++ b/src/components/Auth/RegisterPage.module.css
@@ -3,8 +3,8 @@
     width: 400px;
     border-radius: 20px;
     background-color: rgb(237, 235, 235);
-    margin-top: 70px;
-    margin-left: 250px;
+    /* margin-top: 70px;
+    margin-left: 250px; */
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -39,6 +39,8 @@
     color: rgb(163, 160, 160);
     text-decoration: none;
     display: inline-block;
+    border-style: none;
+    background-color: transparent;
 }
 .select {
     font-size: 25px;
