--- a/src/components/BasketPage/BasketCard.module.css
+++ b/src/components/BasketPage/BasketCard.module.css
@@ -4,12 +4,10 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 50px;
-    padding-left: 5px;
+    gap: 20px;
     background-color: #bebebe;
     border: 1px white solid;
     border-radius: 20px;
-
 }
 .image {
     height: 160px;
@@ -17,4 +15,21 @@
     background-color: #d8d8d8;
     border: 1px white solid;
     border-radius: 20px;
+    margin-left: 5px;
+    margin-top: 5px;
+    
+}
+.counter {
+   display: flex;
+   flex-direction: row;
+   gap: 10px;
+   margin-right: 5px;
+}
+.button {
+   height: 30px;
+   width: 30px;
+   font-size: 23px;
+   border-style: none;
+   background-color: rgb(158, 157, 157);
+   
 }
