--- a/src/components/ProductCard/ProductCardID.module.css
+++ b/src/components/ProductCard/ProductCardID.module.css
@@ -2,31 +2,45 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-top: 50px;
     /* flex-direction: row; */  
 }
 .cardWrapID {
-    height: 700px;
-    width: 500px;
+    height: 500px;
+    width: 900px;
     margin: 5px;
-    background-color: rgb(208, 208, 208);
-    border: 1px black solid;
+    background-color: var(--background-color-contentLight);
+    border: var(--border-content);
     border-radius: 15px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content:space-evenly;
-    /* gap: 10px; */
+    justify-content: flex-start;
+    gap: 10px;
 }
-    
+.description {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    font-size: 18px;
+}
 .image {
-    height: 480px;
-    width: 480px;
-    border: 1px black solid;
+    height: 500px;
+    width: 500px;
+    border: var(--border-content);
     border-radius: 15px;
-    
+    box-sizing: border-box;
 }
  .button {
-    height: 30px;
-    width: 240px;
-    border-radius: 7px;
+    height: 50px;
+    width: 270px;
+    border-radius: 15px;
+    align-self: center;
+    background-color: var(--background-color-contentMedium);
+    border: 3px var(--background-color-contentLarge) solid;
+    color: white;
+    font-size: 23px;
+    font-weight: 700;
+}
+.price {
+    font-size: 21px;
 }
