--- a/src/components/Auth/RegisterPage.module.css
+++ b/src/components/Auth/RegisterPage.module.css
@@ -2,7 +2,8 @@
     height: 600px;
     width: 400px;
     border-radius: 20px;
-    background-color: rgb(237, 235, 235);
+    border: var(--border-content);
+    background-color: var(--background-color-contentLight);
     /* margin-top: 70px;
     margin-left: 250px; */
     display: flex;
@@ -22,7 +23,7 @@
     width: 350px;
 }
 .input {
-    background-color: rgb(237, 235, 235);
+    background-color: var(--background-color-contentLight);
     border-style: none;
     border-bottom: 1px red solid;
     outline:none;
@@ -30,9 +31,14 @@
 }
 .buttonSubmit {
     height: 40px;
-    width: 170px;
+    width: 270px;
     border-radius: 10px;
     align-self: center;
+    background-color: var(--background-color-contentMedium);
+    border: 3px var(--background-color-contentLarge) solid;
+    color: white;
+    font-size: 23px;
+    font-weight: 700;
 }
 .selectАctive {
     font-size: 25px;
@@ -53,5 +59,5 @@
     left: 170px;
     bottom: 44px;
     border-style: none;
-    background-color: rgb(237, 235, 235);
+    background-color: var(--background-color-contentLight);
     }
