--- a/src/components/BasketPage/BasketPage.module.css
+++ b/src/components/BasketPage/BasketPage.module.css
@@ -1,23 +1,29 @@
+.title {
+    font-size: 21px;
+}
 .basketWrap {
     display: grid;
-    grid-template-columns: 670px 250px;
+    grid-template-columns: 800px 250px;
     grid-template-rows: auto auto;
     gap: 30px;
     margin: 20px;
 }
 .cardWrap {
-    background-color: #d8d8d8;
-    border: 1px white solid;
+    background-color: var(--background-color-contentLight);
+    /* border: var(--border-content); */
+    box-shadow:  var(--box-shadow-content); 
     border-radius: 20px;
-    height: 700px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    padding-bottom: 3px;
 }
 .buyWrap {
-    background-color: #d8d8d8;
-    border: 1px white solid;
+    background-color: var(--background-color-contentLight);
+    /* border: var(--border-content); */
+    box-shadow:  var(--box-shadow-content);
     border-radius: 20px;
     height: 250px;
     display: flex;
@@ -34,4 +40,9 @@
     width: 230px;
     border-radius: 10px;
     align-self: center;
+    background-color: var(--background-color-contentMedium);
+    border: 3px var(--background-color-contentLarge) solid;
+    color: white;
+    font-size: 23px;
+    font-weight: 700;
 }
