--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,22 +1,53 @@
 .footer {
     width: 100%;
-    background-color: rgb(132, 129, 129);
+    height: 310px;
+    background-color: var(--background-color-contentMedium);
+    
 }
 .container {
-    width: 1140px;
-    margin:  0 auto;
+    /* width: 1140px;
+    margin:  0 auto; */
     
     /* Лучше для адаптации через фикс. или %? */
-    /* width: 90%;
+    width: 90%;
     max-width: 1440px;
-    margin: 0 auto; */
+    margin: 0 auto;
 }
 .footerWrap {
+    height: 310px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 150px;
-    height: 70px;
-    background-color: rgb(116, 114, 114);
+    background-color: var(--background-color-contentLarge);
+    /* border: 1px black solid;  */
+    font-size: 19px;
+    box-shadow:  var(--box-shadow-content);
+}
+.blockFooter {
+    height: 310px;
+    /* Если не указать height в конкретном блоке то
+    стили ниже работать не будут */
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+}
+/* Стили если через div дулать */
+/* Если не указать height в конкретном блоке то
+    стили ниже работать не будут */
+/* .blockFooter2 {
+    height: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 40px;
+    margin-top: 30px;
     border: 1px black solid; 
+} */
+.link {
+     
+}
+.link:hover {
+    color: #FFFFFF;
 }
