--- a/src/components/PayPage/PayPage.module.css
+++ b/src/components/PayPage/PayPage.module.css
@@ -1,4 +1,64 @@
-.color {
-    background-color: #ddc3f8;
-    height: 795px;
+.payWrap {
+    display: grid;
+    grid-template-columns: 450px 450px;
+    grid-template-rows: auto auto;
+    column-gap: 50px;
+    row-gap: 30px;
+    margin-left: 4px;
+}
+
+.personWrap {
+    height: 100px;
+    width: 450px;
+    background-color: var(--background-color-contentLight);
+    /* border: 1px black solid; */
+    border-radius: 7px;
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 20px;
+    gap: 20px;
+    align-items: center;
+    box-shadow:  var(--box-shadow-content); 
+}
+.person {
+    height: 32px;
+    width: 32px;  
+}
+.briefcase {
+    height: 30px;
+    width: 30px;  
+}
+.innerWrap {
+   display: flex;
+   flex-direction: column;
+   flex-wrap: wrap;
+   justify-content: center;
+   row-gap: 15px;
+   font-size: 19px;
+}
+.description {
+    height: 430px;
+    width: 450px;
+    background-color: var(--background-color-contentLight);
+    /* border: 1px black solid; */
+    border-radius: 7px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-top: 10px;
+    gap: 20px;
+    padding-left: 20px;
+    box-shadow:  var(--box-shadow-content); 
+    opacity: 0;
+    pointer-events: none;
+}
+.description_visible  {
+    opacity: 1;
+       
+}
+.payWrap :hover { 
+    background-color: var(--background-color-contentMedium);
+}
+.h2 {
+    text-indent: 10px;
 }
