--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -5,7 +5,6 @@
     /* flex-direction: row; */
     text-decoration: none;
     margin-top: 10px;
-    
 }
 .cardWrap {
     height: 377px;
@@ -17,7 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:space-evenly;
+    justify-content:space-between;
     /* gap: 10px; */
     text-decoration: none;
 }
@@ -31,8 +30,8 @@
 }
  .button {
     height: 30px;
-    width: 240px;
-    border-radius: 10px;
+    width: 255px;
+    border-radius: 15px;
     text-decoration: none;
     background-color: var(--background-color-contentMedium);
     border: var(--border-content);
@@ -42,4 +41,10 @@
 }
 .center {
     text-align: center;
+}
+.link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;  
 }
