--- a/src/components/OrderPage/OrderPage.module.css
+++ b/src/components/OrderPage/OrderPage.module.css
@@ -2,7 +2,7 @@
     font-size: 21px;
 }
 .orderWrap {
-    width: 1000px;
+    width: 800px;
     margin: 20px;
     background-color: var(--background-color-contentLight);
     /* border: var(--border-content); */
@@ -14,4 +14,18 @@
     align-items: center;
     gap: 20px;
     padding-bottom: 10px;
+}
+/* Медиа запросы */
+@media (max-width: 991px) {
+    .orderWrap  {
+        width: 640px;
+        margin: 10px;
+    }
+}
+@media (max-width: 360px) {
+    .orderWrap  {
+        width: 280px;
+        margin: 3px;
+        margin-left: 4px;
+    }
 }
