--- a/src/components/Admin/EditProduct/AddProductPage.module.css
+++ b/src/components/Admin/EditProduct/AddProductPage.module.css
@@ -1,27 +1,25 @@
 .contentBox {
-    display: grid;
-    grid-template-columns: 500px 500px;
-    grid-template-rows: auto auto;
-    row-gap: 20px;
-    margin-top: 50px;
-    justify-content: space-evenly;
-    font-size: 19px;
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+   margin-top: 20px;
+   margin-bottom: 5px;
+   margin-left: 20px;
+   font-size: 19px;
 }
-.patternWrap {
-    height: 500px;
+.editFileWrap {
+    height: 175px;
     width: 500px;
     background-color: var(--background-color-contentLight);
     border: var(--border-content);
-    border-radius: 20px;
+    border-radius: 15px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    text-indent: 20px;
-    
+    justify-content: space-evenly;
+    align-items: center;
 }
 .editProductWrap {
-    height: 500px;
+    height: 330px;
     width: 500px;
     background-color: var(--background-color-contentLight);
     border: var(--border-content);
@@ -32,11 +30,26 @@
     align-items: center;
     
 }
+.patternWrap {
+    height: auto;
+    width: 500px;
+    background-color: var(--background-color-contentLight);
+    border: var(--border-content);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    text-indent: 20px;
+    gap: 10px;
+}
+
 .inputWrap {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
-    gap: 33px; 
+    gap: 25px; 
 }
 .input {
     background-color: var(--background-color-contentLight);
@@ -57,6 +70,29 @@
     font-size: 20px;
     font-weight: 700;
 }
+.buttonSubmit:hover {
+    background-color: var(--background-color-contentLarge);
+}
+.isLoadingButton {
+    background-color: rgb(255, 207, 207);
+    color: rgb(253, 137, 137);
+    height: 40px;
+    width: 250px;
+    border-radius: 10px;
+    align-self: center;
+    border: 2px var(--background-color-contentLarge) solid;
+    font-size: 20px;
+    font-weight: 700;
+}
+/* .contentBox {
+    display: grid;
+    grid-template-columns: 500px 500px;
+    grid-template-rows: auto auto;
+    row-gap: 20px;
+    margin-top: 50px;
+    justify-content: space-evenly;
+    font-size: 19px;
+} */
 
 
 
