--- a/src/components/Admin/EditUser/AddUserPage.module.css
+++ b/src/components/Admin/EditUser/AddUserPage.module.css
@@ -1,14 +1,14 @@
 .contentBox {
-    display: grid;
-    grid-template-columns: 500px 500px;
-    grid-template-rows: auto auto;
-    row-gap: 20px;
-    margin-top: 50px;
-    justify-content: space-evenly;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    margin-left: 20px;
     font-size: 19px;
-}
+ }
 .patternWrap {
-    height: 500px;
+    height: auto;
     width: 500px;
     background-color: var(--background-color-contentLight);
     border: var(--border-content);
@@ -18,10 +18,10 @@
     justify-content: flex-start;
     align-items: flex-start;
     text-indent: 20px;
-    
+    gap: 10px;
 }
 .editProductWrap {
-    height: 500px;
+    height: 430px;
     width: 500px;
     background-color: var(--background-color-contentLight);
     border: var(--border-content);
@@ -36,7 +36,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 33px; 
+    gap: 25px; 
 }
 .input {
     background-color: var(--background-color-contentLight);
@@ -56,6 +56,9 @@
     color: white;
     font-size: 20px;
     font-weight: 700;
+}
+.buttonSubmit:hover {
+    background-color: var(--background-color-contentLarge);
 }
 
 
