--- a/src/components/Admin/LeftMenu/LeftMenu.module.css
+++ b/src/components/Admin/LeftMenu/LeftMenu.module.css
@@ -7,7 +7,7 @@
     gap: 30px;
     /* background-color: var(--background-color-contentLight); */
     background-color: orange;
-    height: 777px;
+    height: auto;
     margin-top: 4px;
     padding-top: 20px;
    
