--- a/src/components/Auth/RegisterPage.module.css
+++ b/src/components/Auth/RegisterPage.module.css
@@ -40,6 +40,9 @@
     font-size: 23px;
     font-weight: 700;
 }
+.buttonSubmit:hover {
+    background-color: var(--background-color-contentLarge);
+}
 .selectАctive {
     font-size: 25px;
     color: rgb(163, 160, 160);
@@ -61,3 +64,19 @@
     border-style: none;
     background-color: var(--background-color-contentLight);
     }
+
+@media (max-width: 360px) {
+        .authWrap {
+            height: 400px;
+            width: 280px;
+        }
+        .inputWrap {
+            gap: 20px;
+            width: 230px;
+        }
+        .buttonSubmit {
+            width: 240px;
+            font-size: 22px;
+            
+        }
+} 
