--- a/src/components/BasketPage/BasketPage.module.css
+++ b/src/components/BasketPage/BasketPage.module.css
@@ -5,9 +5,10 @@
     display: grid;
     grid-template-columns: 800px 250px;
     grid-template-rows: auto auto;
-    gap: 30px;
+    gap: 20px;
     margin: 20px;
 }
+
 .cardWrap {
     background-color: var(--background-color-contentLight);
     /* border: var(--border-content); */
@@ -18,22 +19,12 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding-bottom: 3px;
-}
-.buyWrap {
-    background-color: var(--background-color-contentLight);
-    /* border: var(--border-content); */
-    box-shadow:  var(--box-shadow-content);
-    border-radius: 20px;
-    height: 250px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    padding-bottom: 10px;
 }
 .total {
    display: flex;
-   justify-content: space-evenly;
    font-size: 25px;
+   gap: 50px;
 }
 .button {
     height: 40px;
@@ -45,4 +36,111 @@
     color: white;
     font-size: 23px;
     font-weight: 700;
+}
+.placeOrderWrap {
+    height: 300px;
+    width: 420px;
+    background-color: var(--background-color-contentLight);
+    border: var(--border-content);
+    /* box-shadow:  var(--box-shadow-content);  */
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.inputWrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px; 
+}
+.input {
+    background-color: var(--background-color-contentLight);
+    height: 30px;
+    width: 400px;
+    border: 2px var(--background-color-contentLarge) solid;
+    outline:none;
+    border-radius: 10px;
+    font-size: 20px; 
+}
+.buttonSubmit {
+    height: 40px;
+    width: 250px;
+    border-radius: 10px;
+    align-self: center;
+    background-color: var(--background-color-contentMedium);
+    border: 2px var(--background-color-contentLarge) solid;
+    color: white;
+    font-size: 22px;
+    font-weight: 700;
+}
+.buttonSubmit:hover {
+    background-color: var(--background-color-contentLarge);
+}
+.isLoadingButton {
+    background-color: rgb(255, 207, 207);
+    color: rgb(253, 137, 137);
+    height: 40px;
+    width: 250px;
+    border-radius: 10px;
+    align-self: center;
+    border: 2px var(--background-color-contentLarge) solid;
+    font-size: 22px;
+    font-weight: 700;
+   
+}
+/* Медиа запросы */
+@media (max-width: 1500px) {
+    .basketWrap {
+       display: flex;
+       flex-wrap: wrap;
+       flex-direction: column;
+       gap: 20px;
+       margin: 20px;
+       width: 800px;
+    }   
+}
+@media (max-width: 991px) {
+    .basketWrap {
+       display: flex;
+       flex-wrap: wrap;
+       flex-direction: column;
+       gap: 20px;
+       margin: 10px;
+       width: 640px;
+    }
+
+}
+@media (max-width: 360px) {
+    .basketWrap {
+       display: flex;
+       flex-wrap: wrap;
+       flex-direction: column;
+       gap: 15px;
+       margin: 5px;
+       width: 300px;
+       height: auto;
+       align-items: flex-start;
+    }
+    .cardWrap{
+        width: 280px;
+    }
+    .placeOrderWrap {
+        height: 300px;
+        width: 280px;
+    }
+    .input {
+        width: 230px;
+        font-size: 17px; 
+    }
+    .buttonSubmit {
+        width: 230px;
+        font-size: 20px;
+        font-weight: 700;
+    }
+    .total {
+        font-size: 23px;
+    }
+   
 }
