--- a/src/components/Core/Container.module.css
+++ b/src/components/Core/Container.module.css
@@ -22,7 +22,7 @@
     display: grid;
     grid-template-columns: 150px auto;
     grid-template-rows: auto auto;
-    
+  
 }
 .mainContentWrap {
     /* flex: 1; */
@@ -30,4 +30,15 @@
     margin-top: 4px;
     margin-left: 4px;
     height: 100%;
+}
+
+@media (max-width: 991px) {
+    .innerWrap  {
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+}
+}
+.innerWrapTrue {
+    grid-template-columns: 150px auto;
+    grid-template-rows: auto auto;
 }
