--- a/src/components/LK/Core/Container.module.css
+++ b/src/components/LK/Core/Container.module.css
@@ -22,3 +22,14 @@
     margin-left: 4px;
     height: 100%;
 }
+@media (max-width: 991px) {
+    .innerWrap  {
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+}
+}
+.innerWrapTrue {
+    grid-template-columns: 150px auto;
+    grid-template-rows: auto auto;
+}
+
