--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     gap: 7px;
-    /* margin-left: 4px;     */
+    margin-left: 4px;    
 }
 .contentBox{
     width: 100%;
@@ -20,18 +20,19 @@
 }
 .bannerWrap {
     width: 100%;
-    height: 170px;
+    height: 200px;
     /* border: 1px black solid; */
     box-shadow:  var(--box-shadow-content); 
     border-radius: 15px;
-    background-color: #febff1;
+    background-color: #fadef5;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     font-size: 55px;
     color: rgb(83, 83, 245);
-    font-weight: 700; 
+    font-weight: 700;
+    text-align: center; 
     
 }
 .privilegeImageWrap {
@@ -40,7 +41,7 @@
 }
 .privilege {
     width: 50%;
-    height: 520px;
+    height: auto;
     background-color: var(--background-color-contentLight);
     border-radius: 15px;
     padding-left: 10px;
@@ -55,6 +56,7 @@
 .image {
     width: 50%;
     height: 500px;
+    object-fit: cover;
     /* border: 1px black solid; */
     box-shadow:  var(--box-shadow-content); 
     border-radius: 15px;
@@ -93,8 +95,46 @@
   .visible {
       opacity: 1;
   }
+/* Медиа запросы */
+@media (max-width: 991px) {
+    .privilegeImageWrap {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    .image, .privilege {
+        height: auto;
+        width: 100%;
+        padding-left: 0px;
+        text-indent: 10px; 
+    }
+    .contentBox{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .bannerWrap, .banner1, .banner2 {
+        font-size: 42px;
+        
+    }
+    .bannerWrap{
+       height: 150px; 
+    }
+    .banner2 {
+        margin-top: 50px;
+    }
 
+}
+@media (max-width: 360px) {
+    .bannerWrap, .banner1, .banner2 {
+        font-size: 28px;
+        
+    }
+    .banner2 {
+        margin-top: 33px;
+    }
 
+}
 
   /* @keyframes banner1 {
     50% { 
