--- a/src/components/Admin/Core/Container.module.css
+++ b/src/components/Admin/Core/Container.module.css
@@ -16,7 +16,7 @@
     
 }
 .mainContentWrap {
-    background-color: rgb(77, 255, 77);
+    /* background-color: rgb(77, 255, 77); */
     margin-top: 4px;
     margin-left: 4px;
     height: 100%;
