--- a/src/components/BasketPage/BasketPage.module.css
+++ b/src/components/BasketPage/BasketPage.module.css
@@ -1,5 +1,5 @@
 .title {
-    font-size: 21px;
+    font-size: 24px;
 }
 .basketWrap {
     display: grid;
@@ -58,12 +58,24 @@
 .input {
     background-color: var(--background-color-contentLight);
     height: 30px;
-    width: 400px;
+    width: 390px;
     border: 2px var(--background-color-contentLarge) solid;
     outline:none;
     border-radius: 10px;
     font-size: 20px; 
 }
+.select {
+    background-color: var(--background-color-contentLight);
+    height: 36px;
+    width: 398px;
+    border: 2px var(--background-color-contentLarge) solid;
+    outline:none;
+    border-radius: 10px;
+    font-size: 20px;
+    font-family: "Times New Roman", Times, serif; 
+}
+
+
 .buttonSubmit {
     height: 40px;
     width: 250px;
@@ -78,7 +90,7 @@
 .buttonSubmit:hover {
     background-color: var(--background-color-contentLarge);
 }
-.isLoadingButton {
+.disabled {
     background-color: rgb(255, 207, 207);
     color: rgb(253, 137, 137);
     height: 40px;
@@ -112,7 +124,7 @@
     }
 
 }
-@media (max-width: 360px) {
+@media (max-width: 430px) {
     .basketWrap {
        display: flex;
        flex-wrap: wrap;
@@ -131,6 +143,10 @@
         width: 280px;
     }
     .input {
+        width: 222px;
+        font-size: 17px; 
+    }
+    .select {
         width: 230px;
         font-size: 17px; 
     }
