--- a/src/components/Core/Container.module.css
+++ b/src/components/Core/Container.module.css
@@ -26,9 +26,10 @@
 }
 .mainContentWrap {
     /* flex: 1; */
-    background-color: rgb(127, 255, 127);
+    /* background-color: rgb(127, 255, 127); */
     margin-top: 4px;
     margin-left: 4px;
+    margin-bottom: 4px;
     height: 100%;
 }
 
