--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -16,7 +16,7 @@
     justify-content: space-evenly;
     background-color: var(--background-color-contentLarge);
     /* border: 1px black solid;  */
-    font-size: 19px;
+    font-size: 21px;
     box-shadow:  var(--box-shadow-content);
 }
 .blockFooter {
@@ -37,11 +37,14 @@
     flex-direction: column;
     
 }
-@media (max-width: 360px) {
+@media (max-width: 430px) {
     .blockFooter2 {
         opacity: 0;
         pointer-events: none;
         width: 0px;
+    }
+    .footerWrap {
+        font-size: 19px;
     }
     
 } 
