--- a/src/components/HeaderMenu/Header.module.css
+++ b/src/components/HeaderMenu/Header.module.css
@@ -123,7 +123,7 @@
 }
 .buttonLogout {
     height: 45px;
-    width: 90px;
+    width: 80px;
     border-radius: 15px;
     text-decoration: none;
     background-color: var(--background-color-contentLight);
@@ -203,7 +203,7 @@
     }
    
 }
-@media (max-width: 360px) {
+@media (max-width: 430px) {
   .headerMenu {
     opacity: 0;
     pointer-events: none;
@@ -213,14 +213,17 @@
     pointer-events: all;
     position: absolute;
     margin-top: 0px;
+    width: 100%;
+    background-color: var(--background-color-contentLight);
+    box-shadow:  1px 1px 1px var(--background-color-contentLarge);
   }
   .headerMenuWrap {
     height: 120px;
     display: grid;
     grid-template-columns: repeat(6,1fr);
     grid-template-rows: 40px 40px 40px;
-    padding-left: 7px;
-    padding-right: 57px;
+    /* padding-left: 7px;
+    padding-right: 57px; */
     box-sizing: border-box;
     row-gap: 1px;
     column-gap: 7px;
@@ -239,6 +242,7 @@
     grid-area: телефон;
     grid-column: span 4;
     grid-row: 1;
+    font-size: 19px;
   }
   .item3 {
     grid-area: бургер;
@@ -247,6 +251,7 @@
     opacity: 1;
     pointer-events: all;
     display: block;
+    align-items: center;
   }
   .item4 {
     grid-area: главная;
@@ -274,7 +279,7 @@
     grid-row: 1;
     position: absolute;
     margin-bottom: 77px;
-    margin-left: 210px;
+    margin-left: 220px;
   }
   .item9 {
     grid-area: корзина;
@@ -291,6 +296,7 @@
   .svgHome {
     height: 30px;
     width: 30px;
+    
   }
   .svgButton {
     height: 27px;
