--- a/src/components/LK/Core/Container.module.css
+++ b/src/components/LK/Core/Container.module.css
@@ -17,7 +17,7 @@
     
 }
 .mainContentWrap {
-    background-color: rgb(77, 255, 77);
+    /* background-color: rgb(77, 255, 77); */
     margin-top: 4px;
     margin-left: 4px;
     height: 100%;
