--- a/src/components/LK/LeftMenu/LeftMenu.module.css
+++ b/src/components/LK/LeftMenu/LeftMenu.module.css
@@ -9,6 +9,7 @@
     height: auto;
     margin-top: 4px;
     padding-top: 20px;
+    padding-bottom: 30px;
    
     border-radius: 15px;
     box-shadow:  var(--box-shadow-content); 
