--- a/src/components/LK/PersonalDataPage/PersonalDataPage.module.css
+++ b/src/components/LK/PersonalDataPage/PersonalDataPage.module.css
@@ -12,3 +12,9 @@
     justify-content: space-evenly;
     font-size: 19px;
 }
+@media (max-width: 430px) {
+    .wrap {
+        width: 170px;
+       
+    }
+}
