--- a/src/components/SearchPage/Search.module.css
+++ b/src/components/SearchPage/Search.module.css
@@ -37,14 +37,15 @@
     }
     
 }
-@media (max-width: 360px) {
+@media (max-width: 430px) {
     .formWrap {
-        width: 280px;
+        width: auto;
         height: 40px;
     }
     .search {
         height: 40px;
-        border: 2px var(--background-color-contentLarge) solid;  
+        border: 2px var(--background-color-contentLarge) solid;
+        font-size: 19px;  
     }
     .button {
         height: 37px;
@@ -57,8 +58,8 @@
 }
 .notFound{
     font-size: 21px;
-   text-align: center;
-   margin-top: 20px;
+    text-align: center;
+    margin-top: 20px;
 }
 .productsWrap {
     display: flex;
