--- a/src/global.css
+++ b/src/global.css
@@ -12,11 +12,18 @@
     --button-outlined-text-color: ;
     --link-color: ; */
   }
+
   html,
   body {
     font-size: 17px;
   }
+  
   a {
     color: inherit;
     text-decoration: none;
   }
+
+  button,
+input {
+  font-family: "Times New Roman", Times, serif;
+}
